--- a/app/styles/catch-all.scss
+++ b/app/styles/catch-all.scss
@@ -4,5 +4,10 @@
     input {
         width: 100%;
         padding: 5px;
+        @media only screen and (prefers-color-scheme: dark) {
+            background-color: #222;
+            color: #eee;
+            border-color: #666;
+        }
     }
 }
