--- a/app/styles/components/crate-toml-copy.scss
+++ b/app/styles/components/crate-toml-copy.scss
@@ -1,9 +1,19 @@
 .crate-toml-copy {
     button, button:active {
         background-color: #FFFFFF;
+        @media only screen and (prefers-color-scheme: dark) {
+            background-color: #111;
+            color: #eee;
+        }
         border: none;
         cursor: pointer;
         position: relative;
+    }
+    button:hover {
+        @media only screen and (prefers-color-scheme: dark) {
+            background: #090909;
+            color: #eee;
+        }
     }
 
     .copy-notification {
