--- a/app/styles/components/flash-message.scss
+++ b/app/styles/components/flash-message.scss
@@ -3,6 +3,9 @@
     font-weight: bold;
     font-size: 110%;
     background-color: rgb(255, 213, 213);
+    @media only screen and (prefers-color-scheme: dark) {
+        background-color: #664545;
+    }
     border: 2px solid rgb(228, 136, 136);
     text-align: center;
     margin: 0 0 10px 0;
