--- a/app/styles/crate/version.scss
+++ b/app/styles/crate/version.scss
@@ -3,6 +3,9 @@
     flex-direction: column;
     padding-bottom: 20px;
     border-bottom: 5px solid $gray-border;
+    @media only screen and (prefers-color-scheme: dark) {
+        border-bottom: 0.25rem solid #666;
+    }
     margin-bottom: 20px;
 
     @media only screen and (min-width: 890px) {
@@ -64,6 +67,16 @@
         padding: 10px;
         background-color: darken($main-bg-dark, 8%);
         display: flex;
+        @media only screen and (prefers-color-scheme: dark) {
+            background-color: #222;
+            color: #eee;
+        }
+
+        @media only screen and (prefers-color-scheme: dark) {
+            svg {
+                filter: invert(100%);
+            }
+        }
 
         .action {
             display: none;
@@ -124,6 +137,10 @@
         p {
             code {
                 background-color: #fff;
+                @media only screen and (prefers-color-scheme: dark) {
+                    background-color: #222;
+                    border-radius: 4px;
+                }
                 padding: 0 2px;
             }
         }
@@ -219,6 +236,12 @@
     .graph-data {
         width: 100%;
         height: 500px;
+        @media only screen and (prefers-color-scheme: dark) {
+            color: #eee;
+            svg {
+                filter: invert(100%);
+            }
+        }
     }
 }
 
