Revert lint config change and pass model correctly in template

--- a/app/templates/crate/versions.hbs
+++ b/app/templates/crate/versions.hbs
@@ -12,7 +12,7 @@
 
 <div class="graph">
   <h4>Downloads per minor version in the last 90 days</h4>
-  {{versions-graph model=model}}
+  {{versions-graph model=this.model}}
 </div>
 
 <div local-class='list' id='crate-all-versions' class='white-rows'>
