--- a/app/templates/crate/version.hbs
+++ b/app/templates/crate/version.hbs
@@ -246,7 +246,15 @@
 {{#unless this.currentVersion.yanked}}
   <div id='crate-downloads'>
     <div class='stats'>
-      <h3>Stats Overview</h3>
+      {{#if this.downloadsContext.num}}
+        <h3>
+          Stats Overview for {{this.downloadsContext.num}}
+          <LinkTo @route="crate" @model={{this.crate}}>(see all)</LinkTo>
+        </h3>
+        
+      {{else}}
+        <h3>Stats Overview {{this.downloadsContext.num}}</h3>
+      {{/if}}
       <div class='stat'>
         <span class='num'>
           {{svg-jar "download"}}
