Use query URL for badge link

--- a/app/components/badge-github-actions.hbs
+++ b/app/components/badge-github-actions.hbs
@@ -1,4 +1,4 @@
-<a href="https://github.com/{{ this.repository }}/actions">
+<a href="{{ this.url }}">
   <img src="{{ this.imageUrl }}" alt="{{ this.text }}" title="{{ this.text }}">
   
 </a>
