--- a/app/components/flash-message.hbs
+++ b/app/components/flash-message.hbs
@@ -1,3 +1,3 @@
-<p class={{this.classes}} data-test-flash-message ...attributes>
+<p local-class="flash {{if this.message "shown"}}" data-test-flash-message ...attributes>
   {{this.message}}
 </p>
