Add styles for the 'categories footer'
I feel bad adding another entire style file, but the overhead should
still be pretty dang minimal since this just adjusts a couple of styling
bits and bobs.

Signed-off-by: Kristofer Rye <kristofer.rye@gmail.com>

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -13,6 +13,7 @@ $link-color: rgb(0, 172, 91);
 @import "application";
 @import "home";
 @import "category-slugs";
+@import "categories";
 @import "crate";
 @import "crate/version";
 @import "components/crate-toml-copy";
