--- a/app/components/rl-dropdown-container.hbs
+++ b/app/components/rl-dropdown-container.hbs
@@ -1,1 +1,4 @@
-{{yield this.dropdownExpanded}}
+{{yield (hash
+  Trigger=(component "rl-dropdown-toggle")
+  Content=(component "rl-dropdown")
+)}}
