--- a/app/templates/crates.hbs
+++ b/app/templates/crates.hbs
@@ -37,14 +37,14 @@
   <div class='sort' data-test-crates-sort>
     <span class='small'>Sort by</span>
 
-    <RlDropdownContainer class="dropdown-container">
-      <RlDropdownToggle @tagName="a" class="dropdown" data-test-current-order>
+    <RlDropdownContainer class="dropdown-container" as |dd|>
+      <dd.Trigger @tagName="a" class="dropdown" data-test-current-order>
         {{svg-jar "sort"}}
         {{ this.currentSortBy }}
         <span class='arrow'></span>
-      </RlDropdownToggle>
+      </dd.Trigger>
 
-      <RlDropdown @tagName="ul" class="dropdown">
+      <dd.Content @tagName="ul" class="dropdown">
         <li>
           <LinkTo @query={{hash page=1 sort="alpha"}}>
             Alphabetical
@@ -65,7 +65,7 @@
             Recent Updates
           </LinkTo>
         </li>
-      </RlDropdown>
+      </dd.Content>
     </RlDropdownContainer>
   </div>
 </div>
