--- a/app/templates/keyword/index.hbs
+++ b/app/templates/keyword/index.hbs
@@ -17,14 +17,14 @@
 
   <div class='sort' data-test-keyword-sort>
     <span class='small'>Sort by</span>
-    <RlDropdownContainer class="dropdown-container">
-      <RlDropdownToggle @tagName="a" class="dropdown" data-test-current-order>
+    <RlDropdownContainer class="dropdown-container" as |dd|>
+      <dd.Trigger @tagName="a" class="dropdown" data-test-current-order>
         {{svg-jar "sort"}}
         {{ this.currentSortBy }}
         <span class='arrow'></span>
-      </RlDropdownToggle>
+      </dd.Trigger>
 
-      <RlDropdown @tagName="ul" class="dropdown">
+      <dd.Content @tagName="ul" class="dropdown">
         <li>
           <LinkTo @query={{hash sort="alpha"}}>
             Alphabetical
@@ -45,7 +45,7 @@
             Recent Updates
           </LinkTo>
         </li>
-      </RlDropdown>
+      </dd.Content>
     </RlDropdownContainer>
   </div>
 </div>
