--- a/app/templates/me/following.hbs
+++ b/app/templates/me/following.hbs
@@ -16,14 +16,14 @@
 
   <div class='sort'>
     <span class='small'>Sort by</span>
-    <RlDropdownContainer class="dropdown-container">
-      <RlDropdownToggle @tagName="a" class="dropdown">
+    <RlDropdownContainer class="dropdown-container" as |dd|>
+      <dd.Trigger @tagName="a" class="dropdown">
         {{svg-jar "sort"}}
         {{ this.currentSortBy }}
         <span class='arrow'></span>
-      </RlDropdownToggle>
+      </dd.Trigger>
 
-      <RlDropdown @tagName="ul" class="dropdown">
+      <dd.Content @tagName="ul" class="dropdown">
         <li>
           <LinkTo @query={{hash sort="alpha"}}>
             Alphabetical
@@ -34,7 +34,7 @@
             Downloads
           </LinkTo>
         </li>
-      </RlDropdown>
+      </dd.Content>
     </RlDropdownContainer>
   </div>
 </div>
