--- a/app/templates/search.hbs
+++ b/app/templates/search.hbs
@@ -29,14 +29,14 @@
     <div class='sort' data-test-search-sort>
       <span class='small'>Sort by </span>
 
-      <RlDropdownContainer class="dropdown-container">
-        <RlDropdownToggle @tagName="a" class="dropdown" data-test-current-order>
+      <RlDropdownContainer class="dropdown-container" as |dd|>
+        <dd.Trigger @tagName="a" class="dropdown" data-test-current-order>
           {{svg-jar "sort"}}
           {{ this.currentSortBy }}
           <span class='arrow'></span>
-        </RlDropdownToggle>
+        </dd.Trigger>
 
-        <RlDropdown @tagName="ul" class="dropdown">
+        <dd.Content @tagName="ul" class="dropdown">
           <li>
             <LinkTo @query={{hash page=1 sort="relevance"}}>
               Relevance
@@ -57,7 +57,7 @@
               Recent Updates
             </LinkTo>
           </li>
-        </RlDropdown>
+        </dd.Content>
       </RlDropdownContainer>
     </div>
   </div>
