--- a/app/templates/user.hbs
+++ b/app/templates/user.hbs
@@ -23,14 +23,14 @@
 
       <div class='sort'>
         <span class='small'>Sort by</span>
-        <RlDropdownContainer class="dropdown-container">
-          <RlDropdownToggle @tagName="a" class="dropdown">
+        <RlDropdownContainer class="dropdown-container" as |dd|>
+          <dd.Trigger @tagName="a" class="dropdown">
             {{svg-jar "sort"}}
             {{ this.currentSortBy }}
             <span class='arrow'></span>
-          </RlDropdownToggle>
+          </dd.Trigger>
 
-          <RlDropdown @tagName="ul" class="dropdown">
+          <dd.Content @tagName="ul" class="dropdown">
             <li>
               <LinkTo @query={{hash sort="alpha"}}>
                 Alphabetical
@@ -51,7 +51,7 @@
                 Recent Updates
               </LinkTo>
             </li>
-          </RlDropdown>
+          </dd.Content>
         </RlDropdownContainer>
       </div>
     </div>
