Dropdown::Content: Remove `click()` handler
All of our dropdowns contain only links, so `this.close()` will actually never be called.

--- a/app/components/dropdown.hbs
+++ b/app/components/dropdown.hbs
@@ -1,4 +1,4 @@
 {{yield (hash
   Trigger=(component "dropdown/trigger" toggle=(action "toggleDropdown"))
-  Content=(component "dropdown/content" isExpanded=this.dropdownExpanded close=(action "closeDropdown"))
+  Content=(component "dropdown/content" isExpanded=this.dropdownExpanded)
 )}}
