Use `ember-click-outside` and `ember-keyboard` to simplify the `Dropdown` component

--- a/app/components/dropdown.hbs
+++ b/app/components/dropdown.hbs
@@ -1,4 +1,9 @@
-{{yield (hash
-  Trigger=(component "dropdown/trigger" toggle=(action "toggleDropdown"))
-  Content=(component "dropdown/content" isExpanded=this.dropdownExpanded)
-)}}
+<div
+  ...attributes
+  {{on-click-outside (action (mut this.dropdownExpanded) false)}}
+>
+  {{yield (hash
+    Trigger=(component "dropdown/trigger" toggle=(action "toggleDropdown"))
+    Content=(component "dropdown/content" isExpanded=this.dropdownExpanded)
+  )}}
+</div>
