Enable sorting crates by most recently added
This change adds the option to sort by "Newly Added" on the following
pages:
  - /crates
  - /search
  - /users/:user_id
  - /teams/:team_id
  - /keywords/:keyword_id
  - /categories/:category_id
  - /me/crates

Sorting is performed using the `crates.created_at` column.

Closes #1919.

--- a/app/templates/crates.hbs
+++ b/app/templates/crates.hbs
@@ -65,6 +65,11 @@
             Recent Updates
           </LinkTo>
         </li>
+        <li>
+          <LinkTo @query={{hash page=1 sort="new"}}>
+            Newly Added
+          </LinkTo>
+        </li>
       </dd.Content>
     </Dropdown>
   </div>
