--- a/app/templates/me/crates.hbs
+++ b/app/templates/me/crates.hbs
@@ -46,6 +46,11 @@
             Recent Updates
           </LinkTo>
         </li>
+        <li>
+          <LinkTo @query={{hash sort="new"}}>
+            Newly Added
+          </LinkTo>
+        </li>
       </dd.Content>
     </Dropdown>
   </div>
