--- a/app/templates/team.hbs
+++ b/app/templates/team.hbs
@@ -60,6 +60,11 @@
                 Recent Updates
               </LinkTo>
             </li>
+            <li>
+              <LinkTo @query={{hash sort="new"}}>
+                Newly Added
+              </LinkTo>
+            </li>
           </dd.Content>
         </Dropdown>
       </div>
