Improve the maintenance badge user experience
* Change the alt-text to be a little more descriptive
  and screen-reader friendly
* Link to the Cargo documentation from the badge which describes what
  the maintenance intentions are

--- a/app/components/badge-maintenance.hbs
+++ b/app/components/badge-maintenance.hbs
@@ -1,9 +1,11 @@
 <span ...attributes>
   {{#unless this.none}}
-    <img
-        src="https://img.shields.io/badge/maintenance-{{this.escapedStatus}}-{{this.color}}.svg"
-        alt="{{this.text}}"
-        title="{{this.text}}">
+    <a href="https://doc.rust-lang.org/cargo/reference/manifest.html#package-metadata">
+      <img
+          src="https://img.shields.io/badge/maintenance-{{this.escapedStatus}}-{{this.color}}.svg"
+          alt="{{this.text}}"
+          title="{{this.text}}">
+    </a>
   {{/unless}}
 
 </span>
