ApiTokenRow: Add test selectors

--- a/app/components/api-token-row.hbs
+++ b/app/components/api-token-row.hbs
@@ -1,5 +1,5 @@
-<div class={{if this.api_token.isNew "row create-token" "row"}}>
-  <div class='name'>
+<div class={{if this.api_token.isNew "row create-token" "row"}} data-test-api-token={{this.api_token.id}}>
+  <div class='name' data-test-name>
     {{#if this.api_token.isNew}}
       <Input
         @type="text"
@@ -19,19 +19,19 @@
 
   {{#unless this.api_token.isNew}}
     <div class='dates'>
-      <div class='created-at'>
+      <div class='created-at' data-test-created-at>
         <span class='small' title={{this.api_token.created_at}}>
           Created {{moment-from-now this.api_token.created_at}}
         </span>
       </div>
       {{#if this.api_token.last_used_at}}
-        <div class='last_used_at'>
+        <div class='last_used_at' data-test-last-used-at>
           <span class='small' title={{this.api_token.last_used_at}}>
             Last used {{moment-from-now this.api_token.last_used_at}}
           </span>
         </div>
       {{else}}
-        <div class='last_used_at'>
+        <div class='last_used_at' data-test-last-used-at>
           <span class='small'>Never used</span>
         </div>
       {{/if}}
@@ -45,6 +45,7 @@
         class='small yellow-button'
         disabled={{this.disableCreate}}
         title={{if this.emptyName "You must specify a name" ""}}
+        data-test-save-token-button
         {{action "saveToken"}}
       >
         Create
@@ -54,19 +55,20 @@
         type="button"
         class='small tan-button'
         disabled={{this.api_token.isSaving}}
+        data-test-revoke-token-button
         {{action "revokeToken"}}
       >
         Revoke
       </button>
     {{/if}}
     {{#if this.api_token.isSaving}}
-      <img class='overlay' src="/assets/ajax-loader.gif">
+      <img class='overlay' src="/assets/ajax-loader.gif" data-test-saving-spinner>
     {{/if}}
   </div>
 </div>
 
 {{#if this.serverError}}
-  <div class='row error'>
+  <div class='row error' data-test-error>
     <div>
       {{ this.serverError }}
     </div>
@@ -74,7 +76,7 @@
 {{/if}}
 
 {{#if this.api_token.token}}
-  <div class='row new-token'>
+  <div class='row new-token' data-test-token>
     <div>
       Please record this token somewhere, you cannot retrieve
       its value again. For use on the command line you can save it to <code>~/.cargo/credentials</code>
