tests/api-token: Add test for token creation

--- a/app/templates/me/index.hbs
+++ b/app/templates/me/index.hbs
@@ -72,7 +72,15 @@
   <div class='me-subheading'>
     <h2>API Access</h2>
     <div class='right'>
-      <button type="button" class='yellow-button' disabled={{this.disableCreate}} {{action "startNewToken"}}>New Token</button>
+      <button
+        type="button"
+        class='yellow-button'
+        disabled={{this.disableCreate}}
+        data-test-new-token-button
+        {{action "startNewToken"}}
+      >
+        New Token
+      </button>
     </div>
   </div>
 
