Display teams on the crate owners page
This change updates the crate owners page
(`/crates/<crate-name>/owners`) to display teams which are set to
be crate owner. It also adds a "Remove" button for each team which
allows removing teams from owning the crate in the same way that user
type owners can be removed.

Addresses #1617.

--- a/app/templates/crate/owners.hbs
+++ b/app/templates/crate/owners.hbs
@@ -44,8 +44,32 @@
 {{/if}}
 
 <div class='owners white-rows'>
+  {{#each this.crate.owner_team as |team|}}
+    <div class='crate row' data-test-owner-team={{team.login}}>
+      <div>
+        <LinkTo @route={{team.kind}} @model={{team.login}}>
+          <UserAvatar @user={{team}} @size="medium-small" />
+        </LinkTo>
+      </div>
+      <div>
+        <LinkTo @route={{team.kind}} @model={{team.login}}>
+          {{team.display_name}}
+        </LinkTo>
+      </div>
+      <div class='stats'>
+        {{#if team.email}}
+          {{team.email}}
+        {{else}}
+          &nbsp;
+        {{/if}}
+      </div>
+      <div class='stats downloads'>
+        <button type="button" class='remove-owner small yellow-button' {{action 'removeOwner' team}}>Remove</button>
+      </div>
+    </div>
+  {{/each}}
   {{#each this.crate.owner_user as |user|}}
-    <div class='crate row'>
+    <div class='crate row' data-test-owner-user={{user.login}}>
       <div>
         <LinkTo @route={{user.kind}} @model={{user.login}}>
           <UserAvatar @user={{user}} @size="medium-small" />
