LinkToDep: Use CSS modules for `optional` CSS class

--- a/app/components/link-to-dep.hbs
+++ b/app/components/link-to-dep.hbs
@@ -2,5 +2,5 @@
   {{ @dep.crate_id }} {{ format-req @dep.req }}
 </LinkTo>
 {{#if @dep.optional}}
-  <span class='optional'>optional</span>
+  <span local-class="optional">optional</span>
 {{/if}}
