Remove unused `name` CSS class assignments

--- a/app/components/category-list.hbs
+++ b/app/components/category-list.hbs
@@ -1,7 +1,7 @@
 <ul>
   {{#each @categories as |category|}}
     <li>
-      <LinkTo @route="category" @model={{category.slug}} class="name">
+      <LinkTo @route="category" @model={{category.slug}}>
         <span>{{ category.category }} ({{ format-num category.crates_cnt }})</span>
         <div class='arrow-in-list'>
           {{svg-jar "right-arrow"}}
