--- a/app/components/keyword-list.hbs
+++ b/app/components/keyword-list.hbs
@@ -1,7 +1,7 @@
 <ul>
   {{#each @keywords as |keyword|}}
     <li>
-      <LinkTo @route="keyword" @model={{keyword}} class="name">
+      <LinkTo @route="keyword" @model={{keyword}}>
         <span>{{ keyword.id }} ({{ format-num keyword.crates_cnt }})</span>
         <div class='arrow-in-list'>
           {{svg-jar "right-arrow"}}
