Convert `crates-heading` from element ID to CSS class

--- a/app/templates/categories.hbs
+++ b/app/templates/categories.hbs
@@ -1,6 +1,6 @@
 {{ title 'Categories' }}
 
-<div id='crates-heading'>
+<div class="crates-heading">
   {{svg-jar "crate"}}
   <h1>All Categories</h1>
 </div>
