--- a/app/templates/category-slugs.hbs
+++ b/app/templates/category-slugs.hbs
@@ -1,7 +1,7 @@
 {{ title 'Category Slugs' }}
 
 <div id='category-slugs'>
-  <div id='crates-heading'>
+  <div class="crates-heading">
     {{svg-jar "crate"}}
     <h1>All Valid Category Slugs</h1>
   </div>
