--- a/app/templates/category/index.hbs
+++ b/app/templates/category/index.hbs
@@ -1,6 +1,6 @@
 {{ title this.category.category ' - Categories' }}
 
-<div id='crates-heading'>
+<div class="crates-heading">
   <LinkTo @route="categories" aria-label="Categories">{{svg-jar "crate"}}</LinkTo>
   <h1>
     {{#each this.category.parent_categories as |parent|}}<LinkTo @route="category" @model={{parent.slug}}>{{parent.category}}</LinkTo>::{{/each}}
