--- a/app/templates/crate/owners.hbs
+++ b/app/templates/crate/owners.hbs
@@ -1,6 +1,6 @@
 {{ title 'Manage Crate Owners' }}
 
-<div id='crates-heading'>
+<div class="crates-heading">
   {{svg-jar "gear"}}
   <h1>Manage Crate Owners</h1>
   <h2>{{ this.crate.name }}</h2>
