--- a/app/templates/crate/version.hbs
+++ b/app/templates/crate/version.hbs
@@ -1,6 +1,6 @@
 {{title this.crate.name}}
 
-<div id='crates-heading' data-test-heading>
+<div class="crates-heading" data-test-heading>
   <div class="wide">
     <div class='info'>
       {{svg-jar "crate" class='crate-icon'}}
