--- a/app/templates/dashboard.hbs
+++ b/app/templates/dashboard.hbs
@@ -1,6 +1,6 @@
 {{ title 'Dashboard' }}
 
-<div id='crates-heading'>
+<div class="crates-heading">
   {{svg-jar "dashboard"}}
   <h1>My Dashboard</h1>
   <div id="stats">
