--- a/app/templates/keyword/index.hbs
+++ b/app/templates/keyword/index.hbs
@@ -1,6 +1,6 @@
 {{ title this.keyword.keyword ' - Keywords' }}
 
-<div id='crates-heading'>
+<div class="crates-heading">
   {{svg-jar "crate"}}
   <h1>All Crates</h1>
   <h2>for keyword '{{ this.keyword.keyword }}'</h2>
