--- a/app/templates/keywords.hbs
+++ b/app/templates/keywords.hbs
@@ -1,6 +1,6 @@
 {{ title 'Keywords' }}
 
-<div id='crates-heading'>
+<div class="crates-heading">
   {{svg-jar "crate"}}
   <h1>All Keywords</h1>
 </div>
