--- a/app/templates/me/crates.hbs
+++ b/app/templates/me/crates.hbs
@@ -1,6 +1,6 @@
 {{ title 'My Crates' }}
 
-<div id='crates-heading'>
+<div class="crates-heading">
   {{svg-jar "crate"}}
   <h1>My Crates</h1>
 </div>
