--- a/app/templates/me/index.hbs
+++ b/app/templates/me/index.hbs
@@ -1,6 +1,6 @@
 {{ title 'Settings' }}
 
-<div id='crates-heading'>
+<div class="crates-heading">
   {{svg-jar "gear"}}
   <h1>Account Settings</h1>
 </div>
