--- a/app/templates/policies.hbs
+++ b/app/templates/policies.hbs
@@ -1,4 +1,4 @@
-<div id='crates-heading'>
+<div class="crates-heading">
   {{svg-jar 'circle-with-i'}}
   <h1>Crates.io Package Policies</h1>
 </div>
