--- a/app/templates/search.hbs
+++ b/app/templates/search.hbs
@@ -1,6 +1,6 @@
 {{title (concat "Search Results for '" this.q "'")}}
 
-<div id='crates-heading' data-test-heading>
+<div class="crates-heading" data-test-heading>
   <div class='info'>
     {{svg-jar "magnifier" width=32 height=32}}
     <h1>Search Results</h1>
