--- a/app/templates/crates.hbs
+++ b/app/templates/crates.hbs
@@ -1,6 +1,6 @@
 {{ title 'Crates' }}
 
-<div id='crates-heading'>
+<div class="crates-heading">
   <div class='info'>
     {{svg-jar "crate"}}
     <h1>All Crates</h1>
