--- a/app/templates/data-access.hbs
+++ b/app/templates/data-access.hbs
@@ -1,4 +1,4 @@
-<div id='crates-heading'>
+<div class="crates-heading">
   {{svg-jar 'circle-with-i'}}
   <h1>Accessing the Crates.io Data</h1>
 </div>
