--- a/app/templates/me/pending-invites.hbs
+++ b/app/templates/me/pending-invites.hbs
@@ -1,6 +1,6 @@
 {{ title 'Pending Invites' }}
 
-<div id='crates-heading'>
+<div class="crates-heading">
   {{svg-jar "gear"}}
   <h1>Pending Owner Invites</h1>
 </div>
