--- a/app/templates/team.hbs
+++ b/app/templates/team.hbs
@@ -1,4 +1,4 @@
-<div id='crates-heading' data-test-heading>
+<div class="crates-heading" data-test-heading>
   <div class="wide">
     <div class='info'>
       <UserAvatar @user={{this.model.team}} @size="medium" data-test-avatar />
