--- a/app/templates/user.hbs
+++ b/app/templates/user.hbs
@@ -1,4 +1,4 @@
-<div id='crates-heading' data-test-heading>
+<div class="crates-heading" data-test-heading>
   <UserAvatar @user={{this.model.user}} @size="medium" data-test-avatar />
   <h1 data-test-username>
     {{ this.model.user.login }}
