Remove redundant `crate-index` and `crate-search` CSS classes
`flex-wrap: wrap;` is already the default for all `crates-heading` elements

--- a/app/templates/crates.hbs
+++ b/app/templates/crates.hbs
@@ -1,6 +1,6 @@
 {{ title 'Crates' }}
 
-<div id='crates-heading' class='crate-index'>
+<div id='crates-heading'>
   <div class='info'>
     {{svg-jar "crate"}}
     <h1>All Crates</h1>
