--- a/app/templates/crate/version.hbs
+++ b/app/templates/crate/version.hbs
@@ -3,7 +3,7 @@
 <div class="crates-heading" data-test-heading>
   <div class="wide">
     <div class='info'>
-      {{svg-jar "crate" class='crate-icon'}}
+      {{svg-jar "crate" local-class='crate-icon'}}
       <h1 data-test-crate-name>{{ this.crate.name }}</h1>
       <h2 data-test-crate-version>{{ this.currentVersion.num }}</h2>
     </div>
