category-slugs: Convert to CSS modules

--- a/app/styles/category-slugs.module.scss
+++ b/app/styles/category-slugs.module.scss
@@ -1,4 +1,8 @@
-#category-slugs {
+.list {
+    composes: white-rows from global;
+    padding-top: 20px;
+    margin: 0;
+
     dt {
         margin-bottom: 5px;
         font-weight: bold;
