Add local `application` CSS class

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -3,7 +3,7 @@
 {{title "crates.io: Rust Package Registry" separator=' - ' prepend=true}}
 <GoogleJsapi />
 
-<div>
+<div local-class="application">
   <nav id="header">
     <LinkTo @route="index" @tabindex="-1">
       <img src="/assets/Cargo-Logo-Small.png" id="logo"
