application: Simplify max width assignment

--- a/app/styles/application.module.scss
+++ b/app/styles/application.module.scss
@@ -1,6 +1,3 @@
 .application {
-    width: 960px;
-    @media only screen and (max-width: 960px) {
-        width: 100%;
-    }
+    max-width: 960px;
 }
