--- a/app/styles/application.module.scss
+++ b/app/styles/application.module.scss
@@ -1,3 +1,25 @@
+* {
+    box-sizing: border-box;
+}
+
+html {
+    background: url('/assets/noise.png');
+    background-color: $html-bg;
+}
+
+html, body {
+    margin: 0;
+}
+
+body {
+    // Use the modern font stack inspired by Bootstrap 4
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    font-size: 16px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .application {
     max-width: 960px;
 }
