Simplify `<noscript>` styling

--- a/app/styles/application.module.scss
+++ b/app/styles/application.module.scss
@@ -20,6 +20,11 @@ body {
     align-items: center;
 }
 
+noscript {
+    color: white;
+    padding: 10px 0;
+}
+
 .application {
     max-width: 960px;
 }
