Move `fork-me` CSS class to CSS module file

--- a/app/styles/application.module.scss
+++ b/app/styles/application.module.scss
@@ -28,3 +28,13 @@ noscript {
 .application {
     max-width: 960px;
 }
+
+.fork-me {
+    position: absolute;
+    top: 0;
+    right: 0;
+
+    @media only screen and (max-width: 1180px) {
+        display: none;
+    }
+}
