--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -148,7 +148,7 @@
     <LinkTo @route="policies">Policies</LinkTo>
   </footer>
 
-  <a href='https://github.com/rust-lang/crates.io' class='fork-me'>
+  <a href='https://github.com/rust-lang/crates.io' local-class='fork-me'>
     <img src='/assets/forkme.png' alt="Fork me on GitHub">
   </a>
 </div>
