Move `after-main-links` CSS class to CSS module file

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -132,19 +132,19 @@
     {{outlet}}
   </main>
 
-  <footer class='after-main-links'>
+  <footer local-class='after-main-links'>
     <a href='https://doc.rust-lang.org/cargo/getting-started/installation.html'>Install</a>
-    <span class="sep">|</span>
+    <span local-class="sep">|</span>
     <a href='https://doc.rust-lang.org/cargo/'>Getting Started</a>
-    <span class="sep">|</span>
+    <span local-class="sep">|</span>
     <a href='https://doc.rust-lang.org/cargo/guide/'>Guide</a>
-    <span class="sep">|</span>
+    <span local-class="sep">|</span>
     <a href='mailto:help@crates.io'>Send us an email</a>
-    <span class="sep">|</span>
+    <span local-class="sep">|</span>
     <a href='https://www.rust-lang.org/policies/security'>Report a security issue</a>
-    <span class="sep">|</span>
+    <span local-class="sep">|</span>
     <a href='https://www.rust-lang.org/policies/privacy'>Privacy notice</a>
-    <span class="sep">|</span>
+    <span local-class="sep">|</span>
     <LinkTo @route="policies">Policies</LinkTo>
   </footer>
 
