--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -126,7 +126,7 @@
     <label for="cargo-mobile-search">Search</label>
   </form>
 
-  <main id="main" class='inner-content'>
+  <main local-class="main">
     <FlashMessage @message={{this.flashMessages.message}} />
 
     {{outlet}}
