--- a/app/components/crate-toml-copy.hbs
+++ b/app/components/crate-toml-copy.hbs
@@ -1,7 +1,7 @@
-<div class="crate-toml-copy" ...attributes>
+<div local-class="crate-toml-copy {{if @inline "inline" "block"}}" ...attributes>
   <CopyButton @clipboardText={{this.copyText}} @success={{action "copySuccess"}} @error={{action "copyError"}} @title="Copy Cargo.toml snippet to clipboard">
     {{svg-jar "copy" alt="Copy Cargo.toml snippet to clipboard"}}
-    <div class="copy-notification {{if this.showSuccess "copy-success" "copy-failure"}}">
+    <div local-class="copy-notification {{if this.showSuccess "copy-success" "copy-failure"}}">
       {{#if this.showNotification}}
         {{#if this.showSuccess}}
           Copied!
@@ -11,5 +11,4 @@
       {{/if}}
     </div>
   </CopyButton>
-  
 </div>
