me.index: Convert token list to CSS modules

--- a/app/templates/me/index.hbs
+++ b/app/templates/me/index.hbs
@@ -94,7 +94,7 @@
     token when prompted.
   </p>
 
-  <div id='tokens'>
+  <div local-class="token-list">
     {{#each this.sortedTokens as |api_token|}}
       <ApiTokenRow @api_token={{api_token}} />
     {{/each}}
