Move `me-subheading` CSS class to CSS module file

--- a/app/styles/me/index.module.scss
+++ b/app/styles/me/index.module.scss
@@ -1,3 +1,13 @@
+.me-subheading {
+    display: flex;
+    .right {
+        flex: 2;
+        display: flex;
+        justify-content: flex-end;
+        align-self: center;
+    }
+}
+
 .token-list {
     background-color: $main-bg-dark;
     display: flex;
