--- a/app/templates/me/index.hbs
+++ b/app/templates/me/index.hbs
@@ -68,9 +68,9 @@
   </div>
 </form>
 
-<div class='me-subheading'>
+<div local-class="me-subheading">
   <h2>API Access</h2>
-  <div class='right'>
+  <div local-class="right">
     <button
       type="button"
       class='yellow-button'
