--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -32,7 +32,7 @@
         required
         data-test-search-input
       >
-      <label for="cargo-desktop-search">Search</label>
+      <label for="cargo-desktop-search" local-class="search-label">Search</label>
     </form>
 
     <div class='nav'>
@@ -123,7 +123,7 @@
       autocorrect="off"
       required
     >
-    <label for="cargo-mobile-search">Search</label>
+    <label for="cargo-mobile-search" local-class="search-label">Search</label>
   </form>
 
   <main local-class="main">
