--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -16,7 +16,7 @@
       </h1>
     </LinkTo>
 
-    <form class='search' action='/search' {{ action "search" on="submit" }} data-test-search-form>
+    <form local-class="desktop-search-form" action='/search' {{ action "search" on="submit" }} data-test-search-form>
       <input
         type="text"
         class="search"
